--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "webpack": "^5.31.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "on-change": "^3.0.2"
   }
 }
